--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -158,6 +158,21 @@
         }
     }
 }
+@media only screen and (max-width: 1440px){
+    .page3{
+        .container3{
+            .content3{
+            flex-direction: column;
+                .column-left3{
+                    margin-bottom: 50px;
+                }
+                .column-right3{
+                align-self: center;
+                }
+            }
+        }
+    }
+}
 @media only screen and (max-width: 1300px){
     .page2{
         .container2{
@@ -168,57 +183,43 @@
             }
         }
     }
-    .page3{
-        .container3{
-            .content3{
-                .column-right3{
-                    .Pimage-style{
-                        width: 650px;
-                        height: 350px;
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 1250px){
-    .page3{
-        .container3{
-            .content3{
-                .column-right3{
-                    .Pimage-style{
-                        width: 600px;
-                        height: 320px;
-                    }
-                }
-            }
-        }
-    }
 }
 @media only screen and (max-width: 1200px){
-    .title-section{
-        font-size: 33px;
-    }
-    .page1{
-        .nav-bar{
-            height: 45px;
-            .navbar-content{
-                ul{
-                    a{
-                        li{
-                            font-size: 14px;
+    .page4{
+        padding-bottom: 100px;
+        .container4{
+            .skills-content{
+                flex-direction: column;
+                .column-left{
+                    width: 80%;
+                    margin-bottom: 50px;
+                }
+                .column-right{
+                    align-self: center;
+                    .img-container{
+                        img{
+                            height: 80px;
                         }
                     }
                 }
             }
         }
+    }
+}
+@media only screen and (max-width: 1040px){
+    .title-section{
+        font-size: 35px;
+    }
+    .container{
+        width: 84%;
+    }
+    .page1{
         .container1{
             .text-content{
                 h1{
                     font-size: 35px;
                 }
-                button{
-                    width: 150px;
+                p{
                     font-size: 16px;
                 }
             }
@@ -229,13 +230,8 @@
             .content2{
                 .column-left2{
                     img{
-                        width: 330px;
-                        height: 330px;
-                    }
-                }
-                .column-right2{
-                    .text{
-                        font-size: 14px;
+                        width: 300px;
+                        height: 300px;
                     }
                 }
             }
@@ -245,14 +241,46 @@
         .container3{
             .content3{
                 .column-left3{
+                    width: 250px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 930px){
+    .page2{
+        .container2{
+            .content2{
+                flex-direction: column;
+                .column-left2{
+                    margin-bottom: 50px;
+                }
+                .column-right2{
+                    align-self: flex-start;
+                    width: 90%;
+                    margin-left: 0px;
+                    font-size: 15px;
+                }
+            }
+        }
+    }
+    .page3{
+        .container3{
+            .content3{
+                .column-left3{
                     h2{
-                        font-size: 18px;
+                        font-size: 20px;
                     }
                     p{
-                        font-size: 14px;
+                        font-size: 15px;
                     }
                 }
-                
+                .column-right3{
+                    .Pimage-style{
+                        width: 720px;
+                    }
+                   
+                }
             }
         }
     }
@@ -261,17 +289,10 @@
             .skills-content{
                 .column-left{
                     h2{
-                        font-size: 18px;
+                        font-size: 20px;
                     }
                     p{
-                        font-size: 14px;
-                    }
-                }
-                .column-right{
-                    .img-container{
-                        img{
-                            height: 70px;
-                        }
+                        font-size: 15px;
                     }
                 }
             }
@@ -282,310 +303,240 @@
             .contact-container{
                 .contact-left{
                     form{
-                        font-size: 14px;
                         .submit{
                             font-size: 15px;
+                            width: 140px;
+                            height: 35px;
                         }
                     }
                 }
                 .contact-right{
-                    span{
-                        font-size: 14px;
-                    }
                     i{
                         font-size: 25px;
                     }
-                    label{ 
-                        font-size: 14px;
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 1180px){
-    .page3{
-        .container3{
-            .content3{
-                .column-right3{
-                    .Pimage-style{
-                        width: 550px;
-                        height: 300px;
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 1100px){
-    .page3{
-        .container3{
-            .content3{
-                .column-right3{
-                    .Pimage-style{
-                        width: 500px;
-                        height: 280px;
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 1040px){
-    .container{
-        width: 84%;
-    }
-    .page2{
-        .container2{
-            .content2{
-                .column-left2{
-                    img{
-                        width: 250px;
-                        height: 250px;
-                    }
-                }
-            }
-        }
-    }
-    .page3{
-        .container3{
-            .content3{
-                .column-left3{
-                    width: 250px;
-                    }
-                }
-        }
-    }
-}
-@media only screen and (max-width: 930px){
-    .page3{
-        .container3{
-            .content3{
-                flex-direction: column;
-                .column-right3{
-                    align-self: center;
-                    margin-top: 30px;
-                    .Pimage-style{
-                        width: 650px;
-                        height: 350px;
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 500px){
-    .container{
-        width: 84%;
-    }
-    .title-section{
-        font-size: 20px;
-    }
-    .page1{
-        .container1{
-            .text-content{
-                h1{
-                    font-size: 25px;
-                }
-                button{
-                    font-size: 14px;
-                    margin-top: 10px;
-                    padding: 7px 0px 7px 0px;
-                    width: 120px;
-                }
-            }
-        }
-    }
-    .page2{
-        padding-bottom: 100px;
-        .container2{
-            .title-section{
-                padding-top: 20px;
-            }
-            .content2{
-                flex-direction: column;
-                .column-left2{
-                    margin-bottom: 20px;
-                    img{
-                        width: 200px;
-                        height: 200px;
-                    }
-                }
-                .column-right2{
-                    margin-left: 0px;
-                    width: 100%;
-                    font-size: 13px;
-                    text-align: justify;
-                    font-size: 12px;
-                }
-            }
-        }
-    }
-    .page3 {
-        .container3{
-            .title-section3{
-                font-size: 20px;
-                margin-top: -60px;
-                padding-top: 70px;
-            }
-            .project-flex-content{
-                flex-direction: column;
-                margin-bottom: 50px;
-                .column-left3{
-                    margin-bottom: 25px;
-                    .project-text-style-h2{
-                        font-size: 17px;
-                    }
-                    p{
-                        font-size: 13px;
-                    }
-                    .btn-container{
-                        margin-bottom: 0px;
-                        .project-btn{
-                            width: 100px;
-                            height: 25px;
-                            &::after{
-                                font-size: 13px;
-                            }
-                        }
-                        button{
-                            width: 100px;
-                            height: 25px;
-                            font-size: 13px;
-                        }
-                    }
-                }
-                .column-right3{
-                    .Pimage-style{
-                        width: 400px;
-                        height: 220px;
-                    }
-                }
-            }
-        }
-    }
-    .page4{
-        padding-bottom: 50px;
-        .container4{
-            .title-section{
-                padding: 70px 0 50px 0;
-            }
-            .skills-content{
-                flex-direction: column;
-                .column-left{
-                    width: 100%;
-                    margin-bottom: 30px;
-                    h2{
-                        font-size: 17px;
-                        text-align: center;
-                    }
-                    p{
-                        font-size: 14px;
-                        text-align: justify;
-                    }
-                }
-                .column-right{
-                    width: 100%;
-                    .img-container{
-                        img{
-                            height: 50px;
-                        }
-                    }
-                }
-            }
-        }
-    }
-    footer{
-        padding-top: 20px;
-        .container5{
-            .contact-container{
-                flex-direction: column;
-                font-size: 14px;
-                .contact-left{
-                    width: 100%;
-                    margin-bottom: 50px;
-                    .submit{
-                        width: 110px;
-                        font-size: 14px;
-                    }
-                }
-                .contact-right{
-                    width: 100%;
                     span{
-                        font-size: 14px;
+                        font-size: 18px;  
                     }
-                    i{
-                        font-size: 18px;
+                    label{
+                        font-size: 15px;
                     }
                 }
+            }
+        }
+    }
+}
+// @media only screen and (max-width: 500px){
+//     .container{
+//         width: 84%;
+//     }
+//     .title-section{
+//         font-size: 20px;
+//     }
+//     .page1{
+//         .container1{
+//             .text-content{
+//                 h1{
+//                     font-size: 25px;
+//                 }
+//                 button{
+//                     font-size: 14px;
+//                     margin-top: 10px;
+//                     padding: 7px 0px 7px 0px;
+//                     width: 120px;
+//                 }
+//             }
+//         }
+//     }
+//     .page2{
+//         padding-bottom: 100px;
+//         .container2{
+//             .title-section{
+//                 padding-top: 20px;
+//             }
+//             .content2{
+//                 flex-direction: column;
+//                 .column-left2{
+//                     margin-bottom: 20px;
+//                     img{
+//                         width: 200px;
+//                         height: 200px;
+//                     }
+//                 }
+//                 .column-right2{
+//                     margin-left: 0px;
+//                     width: 100%;
+//                     font-size: 13px;
+//                     text-align: justify;
+//                     font-size: 12px;
+//                 }
+//             }
+//         }
+//     }
+//     .page3 {
+//         .container3{
+//             .title-section3{
+//                 font-size: 20px;
+//                 margin-top: -60px;
+//                 padding-top: 70px;
+//             }
+//             .project-flex-content{
+//                 flex-direction: column;
+//                 margin-bottom: 50px;
+//                 .column-left3{
+//                     margin-bottom: 25px;
+//                     .project-text-style-h2{
+//                         font-size: 17px;
+//                     }
+//                     p{
+//                         font-size: 13px;
+//                     }
+//                     .btn-container{
+//                         margin-bottom: 0px;
+//                         .project-btn{
+//                             width: 100px;
+//                             height: 25px;
+//                             &::after{
+//                                 font-size: 13px;
+//                             }
+//                         }
+//                         button{
+//                             width: 100px;
+//                             height: 25px;
+//                             font-size: 13px;
+//                         }
+//                     }
+//                 }
+//                 .column-right3{
+//                     .Pimage-style{
+//                         width: 400px;
+//                         height: 220px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     .page4{
+//         padding-bottom: 50px;
+//         .container4{
+//             .title-section{
+//                 padding: 70px 0 50px 0;
+//             }
+//             .skills-content{
+//                 flex-direction: column;
+//                 .column-left{
+//                     width: 100%;
+//                     margin-bottom: 30px;
+//                     h2{
+//                         font-size: 17px;
+//                         text-align: center;
+//                     }
+//                     p{
+//                         font-size: 14px;
+//                         text-align: justify;
+//                     }
+//                 }
+//                 .column-right{
+//                     width: 100%;
+//                     .img-container{
+//                         img{
+//                             height: 50px;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     footer{
+//         padding-top: 20px;
+//         .container5{
+//             .contact-container{
+//                 flex-direction: column;
+//                 font-size: 14px;
+//                 .contact-left{
+//                     width: 100%;
+//                     margin-bottom: 50px;
+//                     .submit{
+//                         width: 110px;
+//                         font-size: 14px;
+//                     }
+//                 }
+//                 .contact-right{
+//                     width: 100%;
+//                     span{
+//                         font-size: 14px;
+//                     }
+//                     i{
+//                         font-size: 18px;
+//                     }
+//                 }
                
-            }
-        }    
-    }
-}
-@media only screen and (max-width: 480px){
-    .page1{
-        .container1{
-            .text-content{
-                h1{
-                    font-size: 23px;
-                    width: 250px;
-                }
-            }
-        }
-    }
-    .page2{
-        .container2{
-            .content2{
-                .column-right2{
-                    .text{
-                        font-size: 13px;
-                    }
-                }
-            }
-        }
-    }
-    .page4{
-        padding-bottom: 50px;
-        .container4{
-            .skills-content{
-                flex-direction: column;
-                .column-left{ 
-                    p{
-                        font-size: 13px;
-                    }
-                }
+//             }
+//         }    
+//     }
+// }
+// @media only screen and (max-width: 480px){
+//     .page1{
+//         .container1{
+//             .text-content{
+//                 h1{
+//                     font-size: 23px;
+//                     width: 250px;
+//                 }
+//             }
+//         }
+//     }
+//     .page2{
+//         .container2{
+//             .content2{
+//                 .column-right2{
+//                     .text{
+//                         font-size: 13px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     .page4{
+//         padding-bottom: 50px;
+//         .container4{
+//             .skills-content{
+//                 flex-direction: column;
+//                 .column-left{ 
+//                     p{
+//                         font-size: 13px;
+//                     }
+//                 }
                 
-            }
-        }
-    }
+//             }
+//         }
+//     }
     
-}
-@media only screen and (max-width: 440px){
-    .page3 {
-        .container3{
-            .project-flex-content{
-                .column-right3{
-                    .Pimage-style{
-                        width: 340px;
-                        height: 190px;
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 400px){
-    .page3 {
-        .container3{
-            .project-flex-content{
-                .column-right3{
-                    .Pimage-style{
-                        width: 310px;
-                        height: 170px;
-                    }
-                }
-            }
-        }
-    }
-}
+// }
+// @media only screen and (max-width: 440px){
+//     .page3 {
+//         .container3{
+//             .project-flex-content{
+//                 .column-right3{
+//                     .Pimage-style{
+//                         width: 340px;
+//                         height: 190px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+// @media only screen and (max-width: 400px){
+//     .page3 {
+//         .container3{
+//             .project-flex-content{
+//                 .column-right3{
+//                     .Pimage-style{
+//                         width: 310px;
+//                         height: 170px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
