--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -69,30 +69,6 @@
                     .Pimage-style{
                 
                     }
-                    .img1{
-
-                    }
-                    .img2{
-                        
-                    }
-                    .img3{
-                        
-                    }
-                    .img4{
-                        
-                    }
-                    .img5{
-                        
-                    }
-                    .img6{
-                        
-                    }
-                    .img7{
-                        
-                    }
-                    .img8{
-                        
-                    }
                 }
             }
         }
@@ -277,7 +253,7 @@
                 }
                 .column-right3{
                     .Pimage-style{
-                        width: 720px;
+                        width: 100%;
                     }
                    
                 }
@@ -294,6 +270,9 @@
                     p{
                         font-size: 15px;
                     }
+                }
+                .column-right{
+                    width: 80%;
                 }
             }
         }
@@ -325,218 +304,206 @@
         }
     }
 }
-// @media only screen and (max-width: 500px){
-//     .container{
-//         width: 84%;
-//     }
-//     .title-section{
-//         font-size: 20px;
-//     }
-//     .page1{
-//         .container1{
-//             .text-content{
-//                 h1{
-//                     font-size: 25px;
-//                 }
-//                 button{
-//                     font-size: 14px;
-//                     margin-top: 10px;
-//                     padding: 7px 0px 7px 0px;
-//                     width: 120px;
-//                 }
-//             }
-//         }
-//     }
-//     .page2{
-//         padding-bottom: 100px;
-//         .container2{
-//             .title-section{
-//                 padding-top: 20px;
-//             }
-//             .content2{
-//                 flex-direction: column;
-//                 .column-left2{
-//                     margin-bottom: 20px;
-//                     img{
-//                         width: 200px;
-//                         height: 200px;
-//                     }
-//                 }
-//                 .column-right2{
-//                     margin-left: 0px;
-//                     width: 100%;
-//                     font-size: 13px;
-//                     text-align: justify;
-//                     font-size: 12px;
-//                 }
-//             }
-//         }
-//     }
-//     .page3 {
-//         .container3{
-//             .title-section3{
-//                 font-size: 20px;
-//                 margin-top: -60px;
-//                 padding-top: 70px;
-//             }
-//             .project-flex-content{
-//                 flex-direction: column;
-//                 margin-bottom: 50px;
-//                 .column-left3{
-//                     margin-bottom: 25px;
-//                     .project-text-style-h2{
-//                         font-size: 17px;
-//                     }
-//                     p{
-//                         font-size: 13px;
-//                     }
-//                     .btn-container{
-//                         margin-bottom: 0px;
-//                         .project-btn{
-//                             width: 100px;
-//                             height: 25px;
-//                             &::after{
-//                                 font-size: 13px;
-//                             }
-//                         }
-//                         button{
-//                             width: 100px;
-//                             height: 25px;
-//                             font-size: 13px;
-//                         }
-//                     }
-//                 }
-//                 .column-right3{
-//                     .Pimage-style{
-//                         width: 400px;
-//                         height: 220px;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-//     .page4{
-//         padding-bottom: 50px;
-//         .container4{
-//             .title-section{
-//                 padding: 70px 0 50px 0;
-//             }
-//             .skills-content{
-//                 flex-direction: column;
-//                 .column-left{
-//                     width: 100%;
-//                     margin-bottom: 30px;
-//                     h2{
-//                         font-size: 17px;
-//                         text-align: center;
-//                     }
-//                     p{
-//                         font-size: 14px;
-//                         text-align: justify;
-//                     }
-//                 }
-//                 .column-right{
-//                     width: 100%;
-//                     .img-container{
-//                         img{
-//                             height: 50px;
-//                         }
-//                     }
-//                 }
-//             }
-//         }
-//     }
-//     footer{
-//         padding-top: 20px;
-//         .container5{
-//             .contact-container{
-//                 flex-direction: column;
-//                 font-size: 14px;
-//                 .contact-left{
-//                     width: 100%;
-//                     margin-bottom: 50px;
-//                     .submit{
-//                         width: 110px;
-//                         font-size: 14px;
-//                     }
-//                 }
-//                 .contact-right{
-//                     width: 100%;
-//                     span{
-//                         font-size: 14px;
-//                     }
-//                     i{
-//                         font-size: 18px;
-//                     }
-//                 }
-               
-//             }
-//         }    
-//     }
-// }
-// @media only screen and (max-width: 480px){
-//     .page1{
-//         .container1{
-//             .text-content{
-//                 h1{
-//                     font-size: 23px;
-//                     width: 250px;
-//                 }
-//             }
-//         }
-//     }
-//     .page2{
-//         .container2{
-//             .content2{
-//                 .column-right2{
-//                     .text{
-//                         font-size: 13px;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-//     .page4{
-//         padding-bottom: 50px;
-//         .container4{
-//             .skills-content{
-//                 flex-direction: column;
-//                 .column-left{ 
-//                     p{
-//                         font-size: 13px;
-//                     }
-//                 }
-                
-//             }
-//         }
-//     }
-    
-// }
-// @media only screen and (max-width: 440px){
-//     .page3 {
-//         .container3{
-//             .project-flex-content{
-//                 .column-right3{
-//                     .Pimage-style{
-//                         width: 340px;
-//                         height: 190px;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
-// @media only screen and (max-width: 400px){
-//     .page3 {
-//         .container3{
-//             .project-flex-content{
-//                 .column-right3{
-//                     .Pimage-style{
-//                         width: 310px;
-//                         height: 170px;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
+@media only screen and (max-width: 800px){
+    .page4{
+        .container4{
+            .skills-content{
+                .column-left{
+                    width: 100%;
+                }
+            }
+        }
+    }
+    footer{
+        .container5{
+            .contact-container{
+                flex-direction: column;
+                .contact-left{
+                    width: 80%;
+                    margin-bottom: 50px;
+                }
+                .contact-right{
+                    width: 100%
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 700px){
+    .page1{
+        .container1{
+            .text-content{
+                h1{
+                    font-size: 30px;
+                }
+                button{
+
+                }
+            }
+        }
+    }
+    .page2{
+        .container2{
+            .content2{
+                .column-right2{
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    .page4{
+        .container4{
+            .skills-content{
+                .column-left{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 600px){
+    .page1{
+        .container1{
+            .text-content{
+               p{
+                width: 100%;
+               }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 573px){
+    .page1{
+        .container1{
+            .text-content{
+              h1{
+               &::before{
+                white-space: pre;
+               }
+              }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 550px){
+    .page4{
+        .container4{
+            .skills-content{
+                .column-left{
+                    h2{
+                        font-size: 20px;
+                    }
+                    p{
+                        font-size: 15px;
+                    }
+                }
+                .column-right{
+                    width: 100%;
+                    .img-container{
+                        img{
+                            height: 70px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    footer{
+        .container5{
+            .contact-container{
+                flex-direction: column;
+                .contact-left{
+                    width: 100%;
+                    margin-bottom: 50px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 480px){
+    .container {
+        width: 88%;
+    }
+    .title-section{
+        font-size: 30px;
+        padding: 20px;
+    }
+    .container2,
+    .container3,
+    .container4,
+    .container5{
+        h1{
+            font-size: 25px;
+        }
+    }
+    .page1{
+        .nav-bar{
+            .navbar-content{
+                ul{
+                    a{
+                        li{
+
+                        }
+                    }
+                }
+            }
+        }
+        .container1{
+            .text-content{
+                h1{
+                    span{
+
+                    }
+                }
+                button{
+
+                }
+            }
+        }
+    }
+    .page2{
+        .container2{
+            .title-section{
+                padding-bottom: 50px;
+            }
+        }
+    }
+    .page3{
+        .container3{
+            .title-section3{
+                padding-bottom: 20px;
+            }
+            .content3{
+                .column-left3{
+                    h2{
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+    .page4{
+        .container4{
+            .title-section{
+                padding: 60px 0 50px 0;
+            }
+            .skills-content{
+                .column-right{
+                    .img-container{
+                        img{
+                            height: 60px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    footer{
+        .container5{
+            .title-section{
+                padding: 60px 0 50px 0;
+            }
+        }
+    }
+}
