--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -34,7 +34,7 @@ $colorTheme3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%
 }
 .reveal2{
     opacity: 0;
-    transform: translateX(30px);
+    transform: translateY(30px);
     transition: all .7s .2s ease-in-out;
 }
 .active {
@@ -86,9 +86,16 @@ $colorTheme3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%
             h1{
                 font-size: 43px;
                 margin-top: 180px;
-                span{
-                    color: $colorTheme1;
-                }   
+                color: $colorTheme1;
+                &::before{
+                    content: "Hi, my name is \A";
+                    color: black;
+                }
+                &::after{
+                    content: "\A Front End Developer";
+                    white-space: pre;
+                    color: black;
+                }
             }
             p{
                 font-size: 18px;
@@ -115,13 +122,12 @@ $colorTheme3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%
     background: $colorTheme1;
     color: white;
     overflow: hidden;
-    z-index: -2;
     padding-bottom: 150px;
     position: relative;
     &::after{
         content: "";
         position: absolute;
-        height: 30rem;
+        height: 31rem;
         left: -5%;
         right: -5%;
         bottom: 0;
@@ -130,7 +136,6 @@ $colorTheme3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%
         transform-origin: 0 0;
         transform: rotateZ(-6deg);
         color: black;
-        z-index: -1;
     }
     .container2{
         .title-section {
@@ -248,8 +253,7 @@ $colorTheme3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%
         .title-section3{
             color: black;
             margin-top: -100px;
-            padding: 100px 0 100px 0;   
-            z-index: 2;
+            padding: 100px 0 100px 0;
         }
         .content3{
             .column-right3{
