--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -472,9 +472,10 @@
     .page3{
         .container3{
             .title-section3{
-                padding-bottom: 20px;
+                padding-bottom: 50px;
             }
             .content3{
+                margin-bottom: 60px;
                 .column-left3{
                     h2{
                         font-size: 20px;
