--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,25 +77,16 @@
   font-weight: 500;
 }
 .page1 .container1 {
-  height: 100vh;
+  height: 800px;
   display: flex;
   align-items: center;
-  display: flex;
-}
-.page1 .container1 .image-container1 {
-  width: 40%;
-  align-self: flex-end;
-}
-.page1 .container1 .image-container1 img {
-  width: 600px;
 }
 .page1 .container1 .text-content {
-  width: 60%;
   margin-bottom: 30px;
+  width: 80%;
 }
 .page1 .container1 .text-content h1 {
   font-size: 43px;
-  margin-top: 180px;
   color: #008726;
 }
 .page1 .container1 .text-content h1::before {
@@ -121,6 +112,18 @@
   border: none;
   border-radius: 6px;
   width: 300px;
+}
+.page1 .container1 .image-container1 {
+  display: flex;
+  align-items: flex-end;
+  height: 100%;
+  width: 20%;
+  position: relative;
+}
+.page1 .container1 .image-container1 img {
+  width: 550px;
+  position: absolute;
+  right: -100px;
 }
 
 .page2 {
@@ -373,6 +376,11 @@ footer .container5 .contact-container .contact-right label {
     margin-left: 60px;
   }
 }
+@media only screen and (max-width: 1250px) {
+  .page1 .container1 .image-container1 img {
+    width: 500px;
+  }
+}
 @media only screen and (max-width: 1200px) {
   .page4 {
     padding-bottom: 100px;
@@ -391,6 +399,30 @@ footer .container5 .contact-container .contact-right label {
     height: 80px;
   }
 }
+@media only screen and (max-width: 1150px) {
+  .page1 .container1 {
+    flex-direction: column-reverse;
+  }
+  .page1 .container1 .text-content {
+    margin-top: 50px;
+    width: 100%;
+    height: 900px;
+  }
+  .page1 .container1 .image-container1 {
+    background-color: #272d2d;
+    margin-top: 100px;
+    overflow: hidden;
+    width: 100%;
+    height: 800px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px -5px black;
+  }
+  .page1 .container1 .image-container1 img {
+    width: 50%;
+    top: 10px;
+    right: 0;
+  }
+}
 @media only screen and (max-width: 1040px) {
   .title-section {
     font-size: 35px;
@@ -404,6 +436,12 @@ footer .container5 .contact-container .contact-right label {
   .page1 .container1 .text-content p {
     font-size: 16px;
   }
+  .page1 .container1 .image-container1 {
+    height: 680px;
+  }
+  .page1 .container1 .image-container1 img {
+    width: 50%;
+  }
   .page2 .container2 .content2 .column-left2 img {
     width: 300px;
     height: 300px;
@@ -413,6 +451,12 @@ footer .container5 .contact-container .contact-right label {
   }
 }
 @media only screen and (max-width: 930px) {
+  .page1 .container1 .image-container1 {
+    height: 680px;
+  }
+  .page1 .container1 .image-container1 img {
+    width: 55%;
+  }
   .page2 .container2 .content2 {
     flex-direction: column;
   }
@@ -459,6 +503,9 @@ footer .container5 .contact-container .contact-right label {
   }
 }
 @media only screen and (max-width: 800px) {
+  .page1 .container1 .image-container1 {
+    height: 600px;
+  }
   .page4 .container4 .skills-content .column-left {
     width: 100%;
   }
@@ -477,6 +524,9 @@ footer .container5 .contact-container .contact-right label {
   .page1 .container1 .text-content h1 {
     font-size: 30px;
   }
+  .page1 .container1 .image-container1 img {
+    width: 60%;
+  }
   .page2 .container2 .content2 .column-right2 {
     width: 100%;
   }
@@ -488,13 +538,28 @@ footer .container5 .contact-container .contact-right label {
   .page1 .container1 .text-content p {
     width: 100%;
   }
+  .page1 .container1 .image-container1 {
+    height: 500px;
+  }
+  .page1 .container1 .image-container1 img {
+    width: 60%;
+  }
 }
 @media only screen and (max-width: 573px) {
+  .page1 {
+    height: 700px;
+  }
   .page1 .container1 .text-content h1::before {
     white-space: pre;
   }
+  .page1 .container1 .image-container1 img {
+    width: 320px;
+  }
 }
 @media only screen and (max-width: 550px) {
+  .page1 .container1 .image-container1 {
+    height: 400px;
+  }
   .page4 .container4 .skills-content .column-left h2 {
     font-size: 20px;
   }
@@ -528,6 +593,9 @@ footer .container5 .contact-container .contact-right label {
 .container4 h1,
 .container5 h1 {
     font-size: 25px;
+  }
+  .page1 .container1 .image-container1 img {
+    width: 300px;
   }
   .page2 .container2 .title-section {
     padding-bottom: 50px;
