--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -549,17 +549,24 @@ footer .container5 .contact-container .contact-right label {
   .page1 {
     height: 700px;
   }
+  .page1 .container1 .text-content {
+    margin-top: 20px;
+    height: 600px;
+  }
   .page1 .container1 .text-content h1::before {
     white-space: pre;
   }
+  .page1 .container1 .text-content button {
+    margin: 50px 0 120px 0;
+  }
+  .page1 .container1 .image-container1 {
+    height: 300px;
+  }
   .page1 .container1 .image-container1 img {
-    width: 320px;
+    width: 300px;
   }
 }
 @media only screen and (max-width: 550px) {
-  .page1 .container1 .image-container1 {
-    height: 400px;
-  }
   .page4 .container4 .skills-content .column-left h2 {
     font-size: 20px;
   }
@@ -594,8 +601,14 @@ footer .container5 .contact-container .contact-right label {
 .container5 h1 {
     font-size: 25px;
   }
+  .page1 .container1 .text-content button {
+    width: 100%;
+  }
+  .page1 .container1 .image-container1 {
+    height: 280px;
+  }
   .page1 .container1 .image-container1 img {
-    width: 300px;
+    width: 220px;
   }
   .page2 .container2 .title-section {
     padding-bottom: 50px;
