--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -225,13 +225,34 @@
 @media only screen and (max-width: 1150px){
     .page1{
         .nav-bar{
+            // position: relative;;
             .navbar-content{
+                position: absolute;
+                background-color: white;
+                width: 300px;
+                height: 400px;
+                right: 0;
+                justify-content: center;
+                border-radius: 6px;
+                box-shadow: -1px 1px 10px -5px black;
+                transform: translateX(100%);
+                transition: transform 1s ease;
                 ul{
+                    flex-direction: column;
+                    align-items: center;
+                    margin-top: 50px;
+                    width: 100%;
+                    height: 100%;
                     a{
                         li{
-
+                            margin: 40px 0 0 0;
                         }
                     }
+                }
+            }
+            .bar-container{
+                .bar{
+                    display: block;
                 }
             }
         }
