--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -76,6 +76,19 @@
   margin-left: 60px;
   font-weight: 500;
 }
+.page1 .nav-bar .bar-container {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+}
+.page1 .nav-bar .bar-container .bar {
+  font-size: 25px;
+  display: none;
+}
+.page1 .nav-bar .bar-container .xmark {
+  display: none;
+  font-size: 25px;
+}
 .page1 .container1 {
   height: 800px;
   display: flex;
@@ -119,6 +132,7 @@
   height: 100%;
   width: 20%;
   position: relative;
+  z-index: -1;
 }
 .page1 .container1 .image-container1 img {
   width: 550px;
@@ -400,6 +414,31 @@ footer .container5 .contact-container .contact-right label {
   }
 }
 @media only screen and (max-width: 1150px) {
+  .page1 .nav-bar .navbar-content {
+    position: absolute;
+    background-color: white;
+    width: 300px;
+    height: 400px;
+    right: 0;
+    justify-content: center;
+    border-radius: 6px;
+    box-shadow: -1px 1px 10px -5px black;
+    transform: translateX(100%);
+    transition: transform 1s ease;
+  }
+  .page1 .nav-bar .navbar-content ul {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+  }
+  .page1 .nav-bar .navbar-content ul a li {
+    margin: 40px 0 0 0;
+  }
+  .page1 .nav-bar .bar-container .bar {
+    display: block;
+  }
   .page1 .container1 {
     flex-direction: column-reverse;
   }
