--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -228,7 +228,8 @@
             // position: relative;;
             .navbar-content{
                 position: absolute;
-                background-color: white;
+                background-color: rgba(255, 255, 255, 0.94);
+                backdrop-filter: blur(10px);
                 width: 300px;
                 height: 400px;
                 right: 0;
@@ -236,7 +237,7 @@
                 border-radius: 6px;
                 box-shadow: -1px 1px 10px -5px black;
                 transform: translateX(100%);
-                transition: transform 1s ease;
+                transition: transform .3s ease-in-out;
                 ul{
                     flex-direction: column;
                     align-items: center;
@@ -555,6 +556,13 @@
     }
 }
 @media only screen and (max-width: 550px){
+    .page1{
+        .nav-bar{
+            .navbar-content{
+                width: 200px;
+            }
+        }
+    }  
     .page4{
         .container4{
             .skills-content{
