--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -125,6 +125,7 @@
   border: none;
   border-radius: 6px;
   width: 300px;
+  cursor: pointer;
 }
 .page1 .container1 .image-container1 {
   display: flex;
@@ -361,6 +362,10 @@ footer .container5 .contact-container .contact-right {
 footer .container5 .contact-container .contact-right span {
   font-size: 20px;
 }
+footer .container5 .contact-container .contact-right a {
+  text-decoration: none;
+  color: black;
+}
 footer .container5 .contact-container .contact-right i {
   margin: 20px 10px 0 0;
   font-size: 30px;
@@ -371,6 +376,7 @@ footer .container5 .contact-container .contact-right .details {
 }
 footer .container5 .contact-container .contact-right label {
   font-weight: 500;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1440px) {
@@ -415,7 +421,9 @@ footer .container5 .contact-container .contact-right label {
 @media only screen and (max-width: 1150px) {
   .page1 .nav-bar .navbar-content {
     position: absolute;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.94);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
     width: 300px;
     height: 400px;
     right: 0;
@@ -423,7 +431,7 @@ footer .container5 .contact-container .contact-right label {
     border-radius: 6px;
     box-shadow: -1px 1px 10px -5px black;
     transform: translateX(100%);
-    transition: transform 1s ease;
+    transition: transform 0.3s ease-in-out;
   }
   .page1 .nav-bar .navbar-content ul {
     flex-direction: column;
@@ -605,6 +613,9 @@ footer .container5 .contact-container .contact-right label {
   }
 }
 @media only screen and (max-width: 550px) {
+  .page1 .nav-bar .navbar-content {
+    width: 200px;
+  }
   .page4 .container4 .skills-content .column-left h2 {
     font-size: 20px;
   }
