--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,6 +54,24 @@
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   box-shadow: 0 1px 9px -5px gray;
+  -webkit-animation: navAnimation 0.3s ease-in-out forwards;
+          animation: navAnimation 0.3s ease-in-out forwards;
+}
+@-webkit-keyframes navAnimation {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: none;
+  }
+}
+@keyframes navAnimation {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: none;
+  }
 }
 .page1 .nav-bar .navbar-content {
   width: 90%;
@@ -97,6 +115,28 @@
 .page1 .container1 .text-content {
   margin-bottom: 30px;
   width: 80%;
+  -webkit-animation: textAnimation 0.3s 0.1s ease-in-out forwards;
+          animation: textAnimation 0.3s 0.1s ease-in-out forwards;
+}
+@-webkit-keyframes textAnimation {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
+}
+@keyframes textAnimation {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
 }
 .page1 .container1 .text-content h1 {
   font-size: 43px;
@@ -139,6 +179,28 @@
   width: 550px;
   position: absolute;
   right: -100px;
+  -webkit-animation: imgAnimation 0.3s 0.1s ease-in-out forwards;
+          animation: imgAnimation 0.3s 0.1s ease-in-out forwards;
+}
+@-webkit-keyframes imgAnimation {
+  0% {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
+}
+@keyframes imgAnimation {
+  0% {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: none;
+    opacity: 1;
+  }
 }
 
 .page2 {
