--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,61 @@
   scroll-behavior: smooth;
 }
 
+.loading-container {
+  width: 100%;
+  height: 100vh;
+  background-color: #313131;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading-container div {
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  margin-left: 8px;
+  border-radius: 50%;
+  -webkit-animation: circleanimation 1s ease-out infinite;
+          animation: circleanimation 1s ease-out infinite;
+}
+.loading-container .loading1 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+.loading-container .loading2 {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+.loading-container .loading3 {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+.loading-container .loading4 {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+@-webkit-keyframes circleanimation {
+  0%, 80%, 100% {
+    transform: scale(0);
+  }
+  40% {
+    transform: scale(1);
+  }
+}
+@keyframes circleanimation {
+  0%, 80%, 100% {
+    transform: scale(0);
+  }
+  40% {
+    transform: scale(1);
+  }
+}
+
+/* Waiting function | till the content is ready */
+.display-container {
+  display: none;
+}
+
 .container {
   margin: 0 auto;
   max-width: 1200px;
