--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -231,12 +231,11 @@
                 backdrop-filter: blur(10px);
                 width: 300px;
                 height: 400px;
-                right: 0;
+                right: -100%;
                 justify-content: center;
                 border-radius: 6px;
                 box-shadow: -1px 1px 10px -5px black;
-                transform: translateX(100%);
-                transition: transform .3s ease-in-out;
+                transition: .3s ease-in-out;
                 ul{
                     flex-direction: column;
                     align-items: center;
@@ -251,9 +250,15 @@
                 }
             }
             .bar-container{
-                .bar{
-                    display: block;
-                }
+                display: block;
+            }
+            .nav-active{
+                right: 0;
+            }
+            .xmark-active{
+                 &::before{
+                    content: "\f00d";
+                 }   
             }
         }
         .container1{
